[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/SelectablePlayer/SelectablePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PalyerSelect/PlayerSelect.gd" type="Script" id=2]

[node name="PlayerSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1480.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1460.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectablePlayer1" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 728.0
margin_bottom = 478.0

[node name="SelectablePlayer2" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 732.0
margin_right = 1460.0
margin_bottom = 478.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 1460.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectablePlayer3" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 728.0
margin_bottom = 478.0

[node name="SelectablePlayer4" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 732.0
margin_right = 1460.0
margin_bottom = 478.0
